--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,23 +1,96 @@
+	<style>
+	/* body{
+		margin:0px;
+		padding: 0px;
+		background-color:#1b203d;
+		 overflow: hidden; 
+		font-family: system-ui;
+	} */
 
 
-<h1>About Us.</h1>
+
+	/* move the circle to  right to left */
+	 .col-div-3{
+		width: 35%;
+		float: right;
+	}  
 
 
-        	 <%= image_tag("/assets/3.jpg", :class=>"d-block w-10")%> 
-<em>STATUS
-UPTIME
-CODE
-DATA
-DISCUSS
-STATS
-CONTRIBUTE
-ABOUT
-HELP
-API
-SECURITY
-MAINTAINERS WANTED
-RubyGems.org is the Ruby community’s gem hosting service. Instantly publish your gems and then install them. Use the API to find out more about available gems. Become a contributor and improve the site yourself.
 
-RubyGems.org is made possible through a partnership with the greater Ruby community. Fastly provides bandwidth and CDN support, Ruby Central covers infrastructure costs, and Ruby Together funds ongoing development and ops work. Learn more about our sponsors and how they work together.
+	/* move the circle to top and down */
+	.col-div-4{
+		width: 30%;
+		float: ; 
+	}
+	.content-box{
+		padding: 20px;
+	}
 
-We need your help to fund the developer time that keeps RubyGems.org running smoothly for everyone. Join Ruby Together today.</em>
+	.circle-wrap {
+	margin: 50px auto;
+	width: 200px;
+	height: 200px;
+	background: #e6e2e7;
+	border-radius: 50%;
+	}
+
+	</style>
+
+
+
+
+
+
+
+
+
+
+	<h1 style="color:#ddd">About Us.</h1>
+
+	<%#= image_tag("/assets/3.jpg", :class=>"d-block w-10")%> 
+	<h4>
+
+		<em style="color:#f7403b">
+					STATUS
+					UPTIME
+			CODE
+			DATA
+			DISCUSS
+			STATS
+			CONTRIBUTE
+			ABOUT
+			HELP
+			API
+			SECURITY
+			MAINTAINERS WANTED
+	</h4>
+	<br>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+		Temporibus maxime sapiente sunt unde debitis? Similique sint itaque possimus delectus odit sunt hic,
+		nemo sed minima, expedita praesentium laborum placeat tempora!
+	</p>
+
+		<div class="col-div-3">
+			<div class="box-4">
+			<div class="content-box">
+				<p>To do <span>Sell All</span></p>
+
+				<div class="circle-wrap">
+		<div class="circle">
+		<div class="mask full">
+			<div class="fill"></div>
+		</div>
+		<div class="mask half">
+			<div class="fill"></div>
+		</div>
+	<%#= image_tag("/assets/3.jpg", :class=>"d-block w-100  profile")%> 
+
+		<!-- <div class="inside-circle"> 70% </div> -->
+		<!-- </div>
+	</div> -->
+<!-- 
+
+			</div>
+		</div>
+		</div> -->
