--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,60 @@
+<style>
+  
+  /* .card {
+      width: 20rem;
+      height:18rem;
+      position:absolute;
+      top:30rem;
+      left: 0rem;
+    } */
+
+    
+	/* move the circle to  right to left */
+	/* .col-div-3{
+		width: 35em;
+		float: right;
+    position: relative;
+    top: 1em;
+    right:6rem ;
+	}   */
+
+/* #col-div-3{
+		width: 53em;
+		float: left;
+    position:absolute;
+    right: 30em;
+	}   */
+
+
+	/* move the circle to top and down */
+	/* .col-div-4{
+		width: 30%;
+		float: left; 
+	} */
+	.content-box{
+		padding: 20px;
+	}
+
+	.circle-wrap {
+	margin: 50px auto;
+	width: 200px;
+	height: 200px;
+	background: #e6e2e7;
+	border-radius: 50%;
+	}
+  #circle-wrap {
+	margin: 50px auto;
+	width: 320px;
+	height: 320px;
+	background: #d8076f;
+	border-radius: 50%;
+	}
+    </style>
+
+
+
+  
+  
 
      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -7,9 +64,9 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-        	 <%= image_tag("/assets/1.jpg", :class=>"d-block w-100")%> 
+        	 <%= image_tag("/assets/e.jpg", :class=>"d-block w-100")%> 
           <div class="carousel-caption d-none d-md-block">
-                  <em> <h3>Track your work. Get results.</h3></em>
+                  <em> <h1>Track your work. Get results.</h1></em>
 
             <p>Some representative placeholder content for the first slide.</p>
           </div>
@@ -17,15 +74,15 @@
         <div class="carousel-item">
         	 <%= image_tag("/assets/1.jpg", :class=>"d-block w-100")%> 
           <div class="carousel-caption d-none d-md-block">
-                   <em> <h3>Create tasks and assign them to colleagues.</h3></em>
+                      <em> <h1>Create tasks and assign them to colleagues.</h1></em>
 
             <i>Some representative placeholder content for the second slide.</i>
           </div>
         </div>
         <div class="carousel-item" >
-        	 <%= image_tag("/assets/1.jpg", :class=>"d-block w-100")%> 
+        <%= image_tag("/assets/e.jpg", :class=>"d-block w-100")%> 
           <div class="carousel-caption d-none d-md-block">
-           <em> <h3>Get notified when work happends</h3></em>
+            <em> <h1>Get notified when work happends</h1></em>
             <b>Some representative placeholder content for the third slide.</b>
           </div>
         </div>
@@ -39,7 +96,89 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+              <!--  End of carousel -->
+  
 
+      
+   <section>
+       <h2 style="color:fuchsia" class="d-flex align-items-center justify-content-center">Our Brand & It's Users feedback</h2>
+    <div class="row">  
+    <div id="circle-wrap">
+        <div id="circle">
+        <div id="mask full">
+          <div id="fill"></div>
+        </div>
+        <div id="mask half">
+          <div id="fill"></div>
+        </div>
+        </div>
+        </div>
+        
+        <div id="circle-wrap">
+            <div id="circle">
+            <div id="mask full">
+              <div id="fill"></div>
+            </div>
+            <div id="mask half">
+              <div id="fill"></div>
+            </div>
+        </div>
+        </div>
+
+        <div id="circle-wrap">
+          <div id="circle">
+          <div id="mask full">
+            <div id="fill"></div>
+          </div>
+          <div id="mask half">
+            <div id="fill"></div>
+          </div>
+      </div>
+      </div>
+      
+      
+      
+    </div>
+
+
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+<div class="card text-center" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+    </section>
+
+
+
+
+
+
+    
+      
 
 
 
