change of login

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -10,7 +10,7 @@
 </style>
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark ">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky">
     <div class="container-fluid">
       
       <%= link_to 'Todo App', root_path, class:"navbar-brand" %>
