--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,96 +1,67 @@
 	<style>
-	/* body{
-		margin:0px;
-		padding: 0px;
-		background-color:#1b203d;
-		 overflow: hidden; 
-		font-family: system-ui;
-	} */
+.container{
+	margin-top: 2%;
+}
+.inner{
+	overflow: hidden;
+}
+.inner img{
+	transition: all 1.5s ease;
+}
+.inner:hover img{
+	transform:scale(1.5);
 
-
-
-	/* move the circle to  right to left */
-	 .col-div-3{
-		width: 35%;
-		float: right;
-	}  
-
-
-
-	/* move the circle to top and down */
-	.col-div-4{
-		width: 30%;
-		float: ; 
-	}
-	.content-box{
-		padding: 20px;
-	}
-
-	.circle-wrap {
-	margin: 50px auto;
-	width: 200px;
-	height: 200px;
-	background: #e6e2e7;
-	border-radius: 50%;
-	}
-
+}
 	</style>
-
-
-
-
-
-
-
-
-
 
 	<h1 style="color:#ddd">About Us.</h1>
 
 	<%#= image_tag("/assets/3.jpg", :class=>"d-block w-10")%> 
-	<h4>
-
-		<em style="color:#f7403b">
-					STATUS
-					UPTIME
-			CODE
-			DATA
-			DISCUSS
-			STATS
-			CONTRIBUTE
-			ABOUT
-			HELP
-			API
-			SECURITY
-			MAINTAINERS WANTED
-	</h4>
-	<br>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-		Temporibus maxime sapiente sunt unde debitis? Similique sint itaque possimus delectus odit sunt hic,
-		nemo sed minima, expedita praesentium laborum placeat tempora!
-	</p>
-
-		<div class="col-div-3">
-			<div class="box-4">
-			<div class="content-box">
-				<p>To do <span>Sell All</span></p>
-
-				<div class="circle-wrap">
-		<div class="circle">
-		<div class="mask full">
-			<div class="fill"></div>
+	<section>
+		<div class="container">
+			<div class="row justify-content-center">
+<div class="col-md-4">
+	<div class="card shadow" style="width: 20rem">
+		<div class="inner">
+	<%= image_tag("/assets/3.jpg", :class=>"d-block w-10 card-img-top")%> 
 		</div>
-		<div class="mask half">
-			<div class="fill"></div>
+
+	<div class="card-body text-center">
+		<h5 class="card-title">Design</h5>
+		<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque error consectetur aliquam! Sunt harum sit beatae deleniti dicta omnis ducimus dignissimos ipsum ad modi accusamus non sint, temporibus incidunt voluptate!</p>
+		<a href="#" class="btn btn-outline-warning">Learn More...</a>
+	</div>
+	</div>
+</div>
+<div class="col-md-4">
+	<div class="card shadow" style="width: 20rem">
+		<div class="inner">	
+	<%= image_tag("/assets/2.png", :class=>"d-block w-20 card-img-top")%> 
 		</div>
-	<%#= image_tag("/assets/3.jpg", :class=>"d-block w-100  profile")%> 
+		<div class="card-body text-center">
+			<h5 class="card-title">Responsive</h5>
+			<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque error consectetur aliquam! Sunt harum sit beatae deleniti dicta omnis ducimus dignissimos ipsum ad modi accusamus non sint, temporibus incidunt voluptate!</p>
+			<a href="#" class="btn btn-outline-primary">Learn More...</a>
+		</div>
+		</div>
+</div>
+<div class="col-md-4">
+	<div class="card shadow" style="width: 20rem">
+		<div class="inner">
+	<%= image_tag("/assets/2.png", :class=>"d-block w-10 card-img-top")%> 
 
-		<!-- <div class="inside-circle"> 70% </div> -->
-		<!-- </div>
-	</div> -->
-<!-- 
+			<!-- <img class="card-img-top" src="" alt="card image cap"> -->
 
+		</div>
+		<div class="card-body text-center">
+			<h5 class="card-title">UI/UX</h5>
+			<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque error consectetur aliquam! Sunt harum sit beatae deleniti dicta omnis ducimus dignissimos ipsum ad modi accusamus non sint, temporibus incidunt voluptate!</p>
+			<a href="#" class="btn btn-outline-danger">Read More...</a>
+		</div>
+		</div>
+</div>
 			</div>
 		</div>
-		</div> -->
+
+
+	</section>
